--- a/support.html
+++ b/support.html
@@ -18,22 +18,40 @@ export default function SupportPage() {
       initial={{ opacity: 0, y: 20 }}
       animate={{ opacity: 1, y: 0 }}
       transition={{ duration: 0.5 }}
-      className="min-h-screen p-6 bg-gray-100"
+      className="min-h-screen p-6 bg-gradient-to-br from-blue-100 to-blue-200 dark:from-gray-800 dark:to-gray-900 text-gray-900 dark:text-white"
     >
-      <h1 className="text-3xl font-bold text-center mb-6">Служба поддержки</h1>
-      <Card className="max-w-lg mx-auto">
-        <CardContent className="space-y-4 p-6">
-          <Textarea
-            placeholder="Опишите вашу проблему или вопрос..."
-            value={message}
-            onChange={(e) => setMessage(e.target.value)}
-            rows={6}
-          />
-          <Button onClick={handleSubmit} className="bg-blue-600 text-white">
-            Отправить
-          </Button>
-        </CardContent>
-      </Card>
+      <motion.h1
+        initial={{ opacity: 0, scale: 0.8 }}
+        animate={{ opacity: 1, scale: 1 }}
+        transition={{ delay: 0.2, duration: 0.5 }}
+        className="text-3xl font-bold text-center mb-6"
+      >
+        Служба поддержки
+      </motion.h1>
+
+      <motion.div
+        initial={{ opacity: 0, y: 10 }}
+        animate={{ opacity: 1, y: 0 }}
+        transition={{ delay: 0.4, duration: 0.6 }}
+      >
+        <Card className="max-w-lg mx-auto shadow-2xl border border-gray-200 dark:border-gray-700">
+          <CardContent className="space-y-4 p-6">
+            <Textarea
+              placeholder="Опишите вашу проблему или вопрос..."
+              value={message}
+              onChange={(e) => setMessage(e.target.value)}
+              rows={6}
+              className="bg-white dark:bg-gray-800 text-gray-900 dark:text-white border border-gray-300 dark:border-gray-600"
+            />
+            <Button
+              onClick={handleSubmit}
+              className="w-full bg-gradient-to-r from-blue-500 to-blue-700 hover:from-blue-600 hover:to-blue-800 text-white shadow-lg"
+            >
+              Отправить
+            </Button>
+          </CardContent>
+        </Card>
+      </motion.div>
     </motion.div>
   );
 }
